Fixing Header by wrapping images in a div and adding padding, Removing footer.

--- a/src/index.css
+++ b/src/index.css
@@ -22,52 +22,39 @@
   display: inline-block;
   width: 13%;
   width: calc(25% - ( ( 20px ) * 0.75 ) );
-  margin-right: 20px;
+  margin-right: 5px;
   margin-bottom: 20px;
-  margin-top: 5px;
-  height: 10%;
+  margin-left: 11px;
+  
 }
 
 .display-show:nth-child(4n+4) {
   margin-right: 0;
 }
 
-.display-show img {
-  width: 100%;
-  height: 10%;
-  size: 10%;
-}
+
 
 .header {
-  z-index: 0;
   background-color: black;
-  height: 3%;
+  height: 9%;
   width: 100%;
   position: fixed;
-  padding: -5px;
   margin-bottom: 10px;
 }
 
 .header img {
-  height: 30%;
+  height: 60%;
   margin-top: 1%;
   margin-left: 2%;
   position: absolute;
 }
 
-.footer {
-  background-color: black;
-  height: 5%;
-  width: 100%;
-  position: fixed;
-  padding-top: 10%;
-}
-
 .container {
-padding-top: 50px;
+  padding-top: 5%;
 }
 
-#display-segment {
-  padding-top: 20px;
-
+img {
+  max-width:90%;
+  width: auto;
+  height: auto;
 }
